@@ -1,3 +1,5 @@
+=== (next) ===
+- NEW: @futoin/log support
 
 === 0.2.0 (2019-11-04) ===
 Initial release
